Changed completely ADVSP design and RSSI signal check idea. Added mute capability and rangeset bar

--- a/AndroidStudioProjects/ADVSPVOL3/app/src/main/res/values/strings.xml
+++ b/AndroidStudioProjects/ADVSPVOL3/app/src/main/res/values/strings.xml
@@ -18,7 +18,8 @@
     <string name="rssi_begin">Nustatoma RSSI</string>
     <string name="location_house">Saugoma vieta - namai</string>
     <string name="location_outside">Saugoma vieta - laukas</string>
-    <string name="silent_hours">Tylos valandos</string>
+    <string name="silent_hours">Begarsis režimas</string>
     <string name="findDevice">Rasti&#10;ADVSP</string>
+    <string name="rangeSetText">Nuotolio nustatymas: Arti - Toli</string>
 
 </resources>
