Still need to think about program exit and device disconnecting behaviour. Added battery level button. Now just need to figure out how to implement it.

--- a/AndroidStudioProjects/ADVSPVOL3/app/src/main/res/values/strings.xml
+++ b/AndroidStudioProjects/ADVSPVOL3/app/src/main/res/values/strings.xml
@@ -19,7 +19,8 @@
     <string name="location_house">Saugoma vieta - namai</string>
     <string name="location_outside">Saugoma vieta - laukas</string>
     <string name="silent_hours">Begarsis režimas</string>
-    <string name="findDevice">Rasti&#10;ADVSP</string>
+    <string name="findDevice">Rasti\nADVSP</string>
     <string name="rangeSetText">Nuotolio nustatymas: Arti - Toli</string>
+    <string name="bateryLevel">Baterijos\nlygis</string>
 
 </resources>
